# PUB_Dados_SmartPhone_ML

./: .gitignore  .pre-commit-config.yaml  ML.py  README.md  pyproject.toml
SRC/dados/: settings.py
SRC/dados/data/: data.jsonl
SRC/dados/spiders/: ML.py
SRC/dashboard/: app.py
SRC/transformacao/: main.py
coleta/coleta/spiders/: mercadolivre.py
dados/dados/: items.py  middlewares.py  pipelines.py
dados/dados/spiders/: ML.py
data/: 01.sql  data.csv  data.db  data.jsonl
