[tool.poetry]
name = "pub-dados-smartphone-ml"
version = "0.1.0"
description = ""
authors = ["Prog-LucasAlves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
taskipy = "^1.12.2"
pandas = "^2.2.2"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'scrapy crawl ML -o ../data/data.jsonl'
all = 'pre-commit run --all-files'
